[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1.0"
csv = "1.3"
rust_decimal = "1.30"
rust_decimal_macros = "1.18"
ethers = "2"
# Web monitoring dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }